# PTOAS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.claude/rules/: cross-layer-sync.md
.codex/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_operation.yml  pass_bug.yml  performance_issue.yml
.github/scripts/: compute_ptoas_version.py  update_pto_isa_pin.py
.github/workflows/: build_wheel.yml  build_wheel_mac.yml  ci.yml  update_pto_isa_pin.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
docker/: Dockerfile  collect_ptoas_dist.sh  collect_ptoas_dist_mac.sh  copy_ptoas_deps.sh  test_ptoas_cli.sh
docs/: PTO_IR_manual.md  ptoas-tile-fusion-design.md  tilelang-dsl-guide.md  vpto-spec.md
docs/designs/: ptoas-tileop-expand-design.md  ptoas-tpush-tpop-design.md  tilebuf-planmemory-phase1.md
docs/isa/: 01-pipeline-sync.md  02-dma-copy.md  03-vector-load-store.md  04-predicate-load-store.md  05-materialization-predicate.md  06-unary-vector-ops.md  07-binary-vector-ops.md  08-vec-scalar-ops.md  09-conversion-ops.md  10-reduction-ops.md  11-compare-select.md  12-data-rearrangement.md  13-dsa-sfu-ops.md  15-shared-scf.md
docs/tile_fusion/: TODO.md  a5_oplib_v1_authoring.md  memref_world_refactor_plan.md  oplib_dev_plan.md  oplib_ir_spec.md  pto_simd_ir_plan.md  (+6 more)
openspec/: config.yaml
ptodsl/: README.md
scripts/: batch_compile_output_cpp.sh  batch_generate_output_npu_testcases.sh  bootstrap_ptoas.sh  compile_pto_to_vpto_llvm.sh  gen_pto_isa_st_samples.py  ptoas_env.sh  run_output_npu_validation.sh
test/: lit.cfg.py
tilelang-dsl/: CMakeLists.txt
tools/ptoas/: CMakeLists.txt  ptoas.cpp
(+1112 files in other folders)
